<resources>
    <string name="app_name">Ligretto Counter</string>
    <string name="play_ligretto">Play Ligretto!</string>
    <string name="hint_player_1">Player 1</string>
    <string name="hint_player_2">Player 2</string>
    <string name="hint_player_3">Player 3</string>
    <string name="hint_player_4">Player 4</string>
    <string name="start_game">Start Game</string>
    <string name="score_zero">0</string>
    <string name="cards_on_table">Table:</string>
</resources>