<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <EditText
        android:id="@+id/player1EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/hint_player_1"
        android:inputType="textCapWords"
        android:layout_margin="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/player2EditText"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/hint_player_2"
        android:inputType="textCapWords"
        android:layout_margin="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/player3EditText"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/hint_player_3"
        android:inputType="textCapWords"
        android:layout_margin="30dp"/>

    <EditText
        android:id="@+id/player4EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/hint_player_4"
        android:inputType="textCapWords"
        android:layout_margin="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:background="@color/purple_500"
        android:text="@string/start_game"
        android:textSize="24sp">
    </Button>


</LinearLayout>