<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/player1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/hint_player_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/score1TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/score_zero"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/player1TextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ligretto1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cards_on_table"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/player2TextView"
        app:layout_constraintEnd_toStartOf="@id/ligretto1EditText"
        app:layout_constraintStart_toStartOf="@id/player1TextView"
        app:layout_constraintTop_toBottomOf="@+id/player1TextView">
    </TextView>

    <EditText
        android:id="@+id/ligretto1EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/ligretto1TextView"
        app:layout_constraintEnd_toStartOf="@id/hand1TextView"
        app:layout_constraintStart_toEndOf="@id/ligretto1TextView"
        app:layout_constraintTop_toTopOf="@+id/ligretto1TextView"
        app:layout_constraintVertical_bias="0.0">
    </EditText>

    <TextView
        android:id="@+id/hand1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards_on_table"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ligretto1TextView"
        app:layout_constraintEnd_toStartOf="@id/hand1EditText"
        app:layout_constraintStart_toEndOf="@id/ligretto1EditText"
        app:layout_constraintTop_toTopOf="@+id/ligretto1TextView">
    </TextView>

    <EditText
        android:id="@+id/hand1EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/hand1TextView"
        app:layout_constraintEnd_toEndOf="@+id/score1TextView"
        app:layout_constraintTop_toTopOf="@+id/hand1TextView"
        app:layout_constraintVertical_bias="0.0">
    </EditText>

    <TextView
        android:id="@+id/player2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/hint_player_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/score2TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ligretto1TextView" />

    <TextView
        android:id="@+id/score2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/score_zero"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/player2TextView"
        app:layout_constraintTop_toBottomOf="@+id/ligretto1EditText" />

    <TextView
        android:id="@+id/player3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/hint_player_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/score3TextView"
        app:layout_constraintTop_toBottomOf="@id/player2TextView"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/score3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/score2TextView"
        app:layout_constraintStart_toEndOf="@id/player3TextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/score_zero"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/player4TextView"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/hint_player_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/score4TextView"
        app:layout_constraintTop_toBottomOf="@id/player3TextView"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/score4TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/score3TextView"
        app:layout_constraintStart_toEndOf="@id/player4TextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/score_zero"
        android:textSize="24sp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@id/player4TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
</Button>


</androidx.constraintlayout.widget.ConstraintLayout>